extends Control

func _on_plus_button_pressed():
	GlobalVars.EXPLOITATION_RATE += 0.1
	if GlobalVars.EXPLOITATION_RATE > 1.0:
		GlobalVars.EXPLOITATION_RATE = 1.0
	$AmountInput.update_count()

func _on_minus_button_pressed():
	GlobalVars.EXPLOITATION_RATE -= 0.1
	if GlobalVars.EXPLOITATION_RATE < 0:
		GlobalVars.EXPLOITATION_RATE= 0
	$AmountInput.update_count()
